--- a/templates/component/signuptheme.html
+++ b/templates/component/signuptheme.html
@@ -1,107 +1,100 @@
-<link href="//db.onlinewebfonts.com/c/766132c828a90cbecf6f7f4027d12725?family=IRAN+Sans" rel="stylesheet" type="text/css"/>
-<style>
-    body {
-        font-family: Arial, Helvetica, sans-serif;
-        background-color: black;
-    }
+{% load static %}
+{#<head>#}
+{#	<title>Login V15</title>#}
+{#	<meta charset="UTF-8">#}
+{#	<meta name="viewport" content="width=device-width, initial-scale=1">#}
+{#<!--===============================================================================================-->	#}
+<!--===============================================================================================-->
 
-    * {
-        box-sizing: border-box;
-    }
+<!--===============================================================================================-->
 
-    /* Add padding to containers */
-    .container {
-        padding: 16px;
-        background-color: white;
-    }
+<!--===============================================================================================-->
+<link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+{#<!--===============================================================================================-->#}
+{#</head>#}
+{#<body>#}
 
-    /* Full-width input fields */
-    input[type=text], input[type=password] {
-        width: 100%;
-        padding: 15px;
-        margin: 5px 0 22px 0;
-        display: inline-block;
-        border: none;
-        background: #f1f1f1;
-    }
+<div class="limiter">
+    <div class="container-login100">
+        <div class="wrap-login100">
+            <div class="login100-form-title" style="background-image: url({% static 'img/bg-01.jpg' %});">
+					<span class="login100-form-title-1">
+						Sign In
+					</span>
+            </div>
 
-    input[type=text]:focus, input[type=password]:focus {
-        background-color: #ddd;
-        outline: none;
-    }
+            <form method="post" class="login100-form validate-form">
+                {% csrf_token %}
+                <div class="wrap-input100 validate-input m-b-26" data-validate="Username is required">
+                    <span class="label-input100">نام</span>
+                    {{ form.first_name }}
+                    <span class="focus-input100"></span>
+                </div>
 
-    /* Overwrite default styles of hr */
-    hr {
-        border: 1px solid #f1f1f1;
-        margin-bottom: 25px;
-    }
+                <div class="wrap-input100 validate-input m-b-18" data-validate="Password is required">
+                    <span class="label-input100">نام خانوادگی</span>
+                    {{ form.last_name }}
+                    <span class="focus-input100"></span>
+                </div>
 
-    /* Set a style for the submit button */
-    .registerbtn {
-        background-color: #4CAF50;
-        color: white;
-        padding: 16px 20px;
-        margin: 8px 0;
-        border: none;
-        cursor: pointer;
-        width: 100%;
-        opacity: 0.9;
-    }
+                <div class="wrap-input100 validate-input m-b-18" data-validate="Password is required">
+                    <span class="label-input100">پست الکترونیک</span>
+                    {{ form.email }}
+                    <span class="focus-input100"></span>
+                </div>
 
-    .registerbtn:hover {
-        opacity: 1;
-    }
+                <div class="wrap-input100 validate-input m-b-18" data-validate="Password is required">
+                    <span class="label-input100">شماره تلفن همراه</span>
+                    {{ form.mobile }}
+                    <span class="focus-input100"></span>
+                </div>
 
-    /* Add a blue text color to links */
-    a {
-        color: dodgerblue;
-    }
+                <div class="wrap-input100 validate-input m-b-18" data-validate="Password is required">
+                    <span class="label-input100">عکس</span>
+                    {{ form.image }}
+                    <span class="focus-input100"></span>
+                </div>
 
-    /* Set a grey background color and center the text of the "sign in" section */
-    .signin {
-        background-color: #f1f1f1;
-        text-align: center;
-    }
-</style>
+                <div class="wrap-input100 validate-input m-b-18" data-validate="Password is required">
+                    <span class="label-input100">رمز عبور</span>
+                    {{ form.password }}
+                    <span class="focus-input100"></span>
+                </div>
 
+                <div class="wrap-input100 validate-input m-b-18" data-validate="Password is required">
+                    <span class="label-input100">تکرار رمز عبور</span>
+                    {{ form.confirm_password }}
+                    <span class="focus-input100"></span>
+                </div>
 
-<form action="/action_page.php">
-    <div class="container">
-        <h1>ثبت نام</h1>
-        <p>برای ایجاد یک حساب کاربری فرم زیر را به دقت پر کنید</p>
-        <hr>
+                <div class="flex-sb-m w-full p-b-30">
+                    {#						<div class="contact100-form-checkbox">#}
+                    {#							<input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">#}
+                    {#							<label class="label-checkbox100" for="ckb1">#}
+                    {#								Remember me#}
+                    {#							</label>#}
+                    {#						</div>#}
 
-        <label for="first_name"><b>نام</b></label>
-        <input type="text" placeholder="نام" name="first_name" id="first_name">
+                    <div>
+                        <a href="#" class="txt1">
+                            Forgot Password?
+                        </a>
+                    </div>
+                </div>
 
-        <label for="last_name"><b>نام خانوادگی</b></label>
-        <input type="text" placeholder="نام خانوادگی" name="last_name" id="last_name">
-
-        <label for="avatar"><b>عکس</b></label>
-        <input type="file" placeholder="عکس" name="avatar" id="avatar">
-
-        <label for="mobile_number"><b>شماره تلفن همراه</b></label>
-        <input type="tel" placeholder="مثال:09122113121" name="mobile_number" id="mobile_number" required>
-
-        <label for="email"><b>پست الکترونیک</b></label>
-        <input type="email" placeholder="پست الکترونیک خود را وارد کنید" name="email" id="email" required>
-
-        <label for="psw"><b>رمز عبور</b></label>
-        <input type="password" placeholder="رمز عبور خود را وارد کنید" name="psw" id="psw" required>
-
-        <label for="psw-repeat"><b>تکرار رمز عبور</b></label>
-        <input type="password" placeholder="رمز عبور خود را تکرار کنید" name="psw-repeat" id="psw-repeat" required>
-
-
-
-        <hr>
-        <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-
-        <button type="submit" class="registerbtn">ثبت نام</button>
+                <div class="container-login100-form-btn">
+                    <button class="login100-form-btn">
+                        ثبت نام
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
+</div>
 
-    <div class="container signin">
-        <p>قبلا یک حساب کاربری داشته اید؟{% include 'component/login.html' %}.</p>
-    </div>
-</form>
 
+<script src="{% static 'js/main.js' %}"></script>
+
+{#</body>#}
+{#</html>#}
